; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_spectral.c_create_buf_file_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_spectral.c_create_buf_file_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dentry = type { i32 }
%struct.rchan_buf = type { i32 }

@relay_file_operations = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.dentry* (i8*, %struct.dentry*, i32, %struct.rchan_buf*, i32*)* @create_buf_file_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.dentry* @create_buf_file_handler(i8* %0, %struct.dentry* %1, i32 %2, %struct.rchan_buf* %3, i32* %4) #0 {
  %6 = alloca %struct.dentry*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.dentry*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.rchan_buf*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.dentry*, align 8
  store i8* %0, i8** %7, align 8
  store %struct.dentry* %1, %struct.dentry** %8, align 8
  store i32 %2, i32* %9, align 4
  store %struct.rchan_buf* %3, %struct.rchan_buf** %10, align 8
  store i32* %4, i32** %11, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = load i32, i32* %9, align 4
  %15 = load %struct.dentry*, %struct.dentry** %8, align 8
  %16 = load %struct.rchan_buf*, %struct.rchan_buf** %10, align 8
  %17 = call %struct.dentry* @debugfs_create_file(i8* %13, i32 %14, %struct.dentry* %15, %struct.rchan_buf* %16, i32* @relay_file_operations)
  store %struct.dentry* %17, %struct.dentry** %12, align 8
  %18 = load %struct.dentry*, %struct.dentry** %12, align 8
  %19 = call i64 @IS_ERR(%struct.dentry* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %5
  store %struct.dentry* null, %struct.dentry** %6, align 8
  br label %25

22:                                               ; preds = %5
  %23 = load i32*, i32** %11, align 8
  store i32 1, i32* %23, align 4
  %24 = load %struct.dentry*, %struct.dentry** %12, align 8
  store %struct.dentry* %24, %struct.dentry** %6, align 8
  br label %25

25:                                               ; preds = %22, %21
  %26 = load %struct.dentry*, %struct.dentry** %6, align 8
  ret %struct.dentry* %26
}

declare dso_local %struct.dentry* @debugfs_create_file(i8*, i32, %struct.dentry*, %struct.rchan_buf*, i32*) #1

declare dso_local i64 @IS_ERR(%struct.dentry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
